# veritascribe

./: .gitignore  CLAUDE.md  ENHANCEMENTS.md  ProjectPlan.md  README.md  dashboard_rewrite_plan.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
dashboard/: .sesskey  launch_fasthtml.py
dashboard/core/: data_processor.py
dashboard/datastar_app/: README.md  app.py  components.py  stores.py
dashboard/panel_app/: app.py
dashboard/panel_app/services/: data_service.py
dashboard/panel_app/state/: app_state.py
docs/: api-reference.qmd  architecture.qmd  configuration.qmd  index.html  usage.qmd
docs/_site/: api-reference.html  architecture.html  configuration.html  search.json  troubleshooting.html  usage.html
src/veritascribe/: __init__.py  config.py  data_models.py  llm_modules.py  main.py  pdf_processor.py  pipeline.py  report_generator.py
